terraform/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls: 
  - hosts:
    - XXX.devops-cloud.io
    secretName: tls-secret
  rules:
  - host: XXX.devops-cloud.io
    http:
      paths:
      - backend:
          service:
            name: <service> # /eshop-service
            port:
              number: 80
        path: /<path>   # /test
        pathType: Exact
